# drums_SAE

./: .env  .gitignore  .gitmodules  main.py  pyproject.toml
demo/: __init__.py  app.py  config.py  run.py  state.py  theme.py  viz.py
notebooks/: 01_data_exploration.py  02_a2_sae_eval.ipynb  02_a2_sae_eval.py  02_dataset_creation.py  03_steer_generation.ipynb  03_steer_generation.py  feature_summary.csv
src/drums_SAE/: dataset_prepare.py
src/drums_SAE/sae/: model.py
src/drums_SAE/steering/: steer.py  temporal_steer.py
src/drums_SAE/training/: data.py  pre_encode_dataset.py  train.py
tests/: conftest.py  test_env.py
